[tool.poetry]
name = "heaume-cli"
version = "0.1.0"
description = "The CLI of Heaume."
authors = ["dylandoamaral <do.amaral.dylan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
influxdb-client = "^1.14.0"
rich = "^9.10.0"
pendulum = "^2.1.2"
isort = "^5.7.0"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
heaume = 'heaume_cli:cli'